--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,10 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 OCTANE_SERVER=frankenphp
+
+OLLAMA_MODEL=
+OLLAMA_URL=
+OLLAMA_DEFAULT_PROMPT=
+OLLAMA_CONNECTION_TIMEOUT=
+
+DEEPSEEK_API_KEY=
